# firebird

./: .eslintrc  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.svelte  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/src/: input_channel.rs  main.rs
src/lib/: AppWindow.svelte  CesiumViewer.svelte  HomePage.svelte  Navigation.svelte  PlotWindow.svelte  Scenario3D.svelte
src/test/: app.test.ts  cesium-viewer.test.ts
